# apollo-psp

./: .gitignore  CHANGELOG.md  CMakeCache.txt  CMakeLists.txt  README.md
.github/workflows/: build.yml
data/langs/: lang_de.po  lang_es.po  lang_fr.po  lang_it.po  lang_ja.po  lang_ko.po  lang_pt.po  lang_ru.po  lang_zh.po  lang_zh_cn.po  lang_zh_tw.po  zh_TW.po
docs/: README.md  translate.po
include/: ahx.h  common.h  font-6x10.h  icon0.h  kirk_engine.h  menu.h  plugin.h  ps1card.h  psppad.h  saves.h  settings.h  utils.h
source/: ahx.c  ciso.c  common.c  dialog.c  draw.c  exec_cmd.c  http.c  kirk_engine.c  libfont.c  main.c  menu_about.c  menu_cheats.c  menu_hex.c  menu_main.c  menu_options.c  parsedreg.c  ps1card.c  psp_decrypter.c  psppad.c  saves.c  settings.c  ttf_fonts.c  util.c  vmp_resign.c  zip_util.c
